NXP-33194: cleanup / format